Fix: wrap app to v-app

--- a/assets/global.scss
+++ b/assets/global.scss
@@ -2,7 +2,7 @@ body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
 }
 
-a {
-  color: inherit;
+.v-application a {
+  color: black !important;
   text-decoration: none;
 }
